--- a/game/assets/game.css
+++ b/game/assets/game.css
@@ -1,7 +1,16 @@
 body {
-   text-align: center;
+  text-align: center;
 }
 
 ul {
-   list-style-type: none;
- }
+  list-style-type: none;
+}
+
+#sound {
+  font-size: 2em;
+  padding: 1em 0;
+}
+
+#sound a {
+  margin-right: 1em;
+}
